Fixed #98 gallery alignment

--- a/css/kgvid_styles.css
+++ b/css/kgvid_styles.css
@@ -29,6 +29,14 @@
 	display: inline-block;
 }
 
+.kgvid_textalign_right {
+	text-align:right;
+}
+
+.kgvid_textalign_center {
+	text-align:center;
+}
+
 .kgvid_videodiv {
 	position: relative;
 }
